# dotfiles

./: README.md
ags/: app.ts  main.ts
ags/modules/: bar.ts  notificationPopups.ts  styleTester.ts
ags/modules/.commonwidgets/: clickcloseregion.js
ags/modules/center/: DateColumn.ts  NotificationColumn.ts  main.ts
ags/modules/overview/: keybind.js  overview_hyprland.js  searchbuttons.js
ags/modules/powermenu/: Verification.ts
ags/modules/sideleft/: main.ts
ags/scripts/: calendar.py  getWorkspaces.sh
ags/services/: ecal.ts  powermenu.ts
ags/style/: appLauncher.scss  bar.scss  center.scss  cheatsheet.scss  colors.scss  common.scss  components.scss  controlCenter.scss  dashboard.scss  lib_mixins.scss  main.scss  notification.scss  notifications.scss  notificationsWindow.scss  osd.scss  player.scss  popupMenu.scss  powermenu.scss  scrim.scss  sideleft.scss  sideright.scss  style.scss  styleTester.scss
agsv1/: tsconfig.json
agsv1/services/: datetime.ts
agsv1/style/: powermenu.scss  sideleft.scss
hypr/: hyprland.conf
hypr/conf/: autostart.conf  decoration.conf  keybinding.conf  windowrule.conf
hypr/scripts/: getworkspace.sh
hyprland/: .stow-local-ignore
hyprland/.config/ags_vala/src/: gresource.xml  meson.build
hyprland/.config/ags_vala/src/cli/: cli.vala  meson.build
hyprland/.config/ags_vala/src/lib/Math/: ast.h  evaluator.c  evaluator.h  lexer.c  lexer.h  meson.build  mpars.c  mpars.h  parser.c  parser.h
hyprland/.config/ags_vala/src/scss/: Bar.scss  Color.scss  Colors.scss  Notification.scss  Overview.scss  PowerMenu.scss  QuickMenu.scss  Settings.scss  Unset.scss  _tokens.scss  main.scss
hyprland/.config/ags_vala/src/ui/: AppButton.blp  Bar.blp  Dashboard.blp  NotificationCenter.blp  NotificationContent.blp  Overview.blp  PowerMenu.blp  QAudioItem.blp  QMediaPlayer.blp  QMultimedia.blp  Qheader.blp  QuickMenu.blp
hyprland/.config/ags_vala/src/vala/: App.vala
hyprland/.config/ags_vala/src/vala/bar/: Bar.vala
hyprland/.config/ags_vala/src/vala/bar/items/: Workspaces.vala
hyprland/.config/ags_vala/src/vala/dashboard/: Dashboard.vala
hyprland/.config/ags_vala/src/vala/notification/: NotificationCenter.vala  NotificationContent.vala  NotificationItem.vala
hyprland/.config/ags_vala/src/vala/overview/: AppButton.vala  Overview.vala
hyprland/.config/ags_vala/src/vala/powermenu/: PowerMenu.vala
hyprland/.config/ags_vala/src/vala/quickmenu/: QAudioItem.vala  QMediaPlayer.vala  QMultimedia.vala  Qheader.vala  QuickMenu.vala
hyprland/.config/ags_vala/src/vala/utils/: PopupWindow.vala  Scss.vala  Underlay.vala
material-colors/templates/: material-discord.scss
setup/: import_settings.py
setup/MicroTex/: PKGBUILD  m-microtex-git-r494.0e3707f-1-x86_64.pkg.tar.zst
setup/gtk-3.0/: gtk.css
setup/gtk-4.0/: gtk.css
terminal/: .zshrc
(+87 files in other folders)
